Modify content and structure in 聊天系统.html
Updated content in the HTML file, including section titles and links.

--- a/聊天系统.html
+++ b/聊天系统.html
@@ -60,8 +60,8 @@
 				<div class="park-inside">
 					<!--<img src="" alt="">-->
 					<div class="content-sec">
-					<h2>Section</h2>
-						<span>[链接]Section发了一个網站</span>
+					<h2>Small Middle Tt</h2>
+						<span>[链接]Tt发了一个網站</span>
 					</div>
 				</div>
 				<span class="date">now</span>
@@ -98,5 +98,6 @@
         </div>
     </div>
 		<a href="图书.html"><img src="img/图书.png"></a>
+
 
 </body></html>
