--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!doctype html>
 <html>
 <head>
-	<title>Hvored環想空間</title>
+	<title>Section的環想空間</title>
 	<meta charset="utf-8">
 <!--网页主题下方的描述说明内容-->
-	<meta name="description" content="這是我和小環共同製作的動態個性網頁，目前還處於開發階段...">
+	<meta name="description" content="這是我和小環共同製作的个人主页，目前還處於開發階段...">
 <!--搜索关键字-->
-	<meta name="keywords" content="幻想空間，Hvored"> 
+	<meta name="keywords" content="幻想空間，Sectionp">
 	<meta name="author" content="小中·TT"
-<!--引入css文件-->
-	<link rel="stylesheet"
-		  href="p標簽黑色.css">
+	
 <!--浏览器标签栏图标-->
 	<link rel="icon" href="Huan.ico" type="image/x-icon">
-	<style>
+	<!--<style>
 		body
 		{
 			font-family: arial,sans-serif;
 			background-color: #000000; /*纯色背景*/
                        background:linear-gradient(to right,#0000ff,#ff00ff); /*渐变背景*/
 		}
-	</style>
+	</style>-->
+	<link rel="stylesheet" href="settings/CSS/index/variation.css">
+	<link rel="stylesheet" href="settings/CSS/index/Index Text-appearance.css">
 	</head>
+	
 	<body>
-	<p> 这是一段文字，正在测试文字与背景的契合度</p>
-	</body>
+		<div class="variation"></div>
+	<button type="button" class="btn btn-primary" onclick="window.location.href='ring.html';">运转环</button>
+	<botton class="gradient-btn" onclick="window.location.href='personal.html'">關於我</botton>
+	<botton class="gradient-btn" onclick="window.location.href='illusion.html'">映</botton>
+	<botton class="gradient-btn" onclick="window.location.href='work.html'">工作</botton>
+	<botton class="gradient-btn" onclick="window.location.href='Blog.html'">Blog</botton>
+	<botton class="gradient-btn" onclick="window.location.href='Story.html'">故事</botton>
+	<botton class="gradient-btn" onclick="window.location.href='EB.html'">娱乐基地</botton>
+</head>
+</body>
 </html>	
