--- a/GAMESTART/BSJQ.html
+++ b/GAMESTART/BSJQ.html
@@ -16,8 +16,8 @@
             <div class="main-buttons">
                 <button class="main-btn active" data-id="Q" data-icon="Show/Qiming/xq.ico" data-page="XQFILES/XiangQi.html">棋</button>
                 <button class="main-btn" data-id="J" data-icon="Show/Xiaojing/j.ico" data-page="JFILES/Jian.html">箭</button>
-                <button class="main-btn" data-id="S" data-icon="Show/Qiming/xq.ico" data-page="XQFILES/XiangQi.html">绳</button>
-                <button class="main-btn" data-id="Z" data-icon="Show/Qiming/xq.ico" data-page="XQFILES/XiangQi.html">珠</button>
+                <button class="main-btn" data-id="S" data-icon="Show/Qiming/xq.ico" data-page="SFILES/Sheng.html">绳</button>
+                <button class="main-btn" data-id="Z" data-icon="Show/Qiming/xq.ico" data-page="BLZFILES/bolizhu.html">珠</button>
             </div>
             
             <button class="nav-btn next"><h1>R</h1></button>
