--- a/GAMESTART/BSJQ.html
+++ b/GAMESTART/BSJQ.html
@@ -17,7 +17,7 @@
                 <button class="main-btn active" data-id="Q" data-icon="Show/Qiming/xq.ico" data-page="XQFILES/XiangQi.html">棋</button>
                 <button class="main-btn" data-id="J" data-icon="Show/Xiaojing/j.ico" data-page="JFILES/Jian.html">箭</button>
                 <button class="main-btn" data-id="S" data-icon="Show/Small Middle·TT/s.ico" data-page="SFILES/Sheng.html">绳</button>
-                <button class="main-btn" data-id="Z" data-icon="Show/Hwoad/blz.ico" data-page="BLZFILES/bolizhu.html">珠</button>
+                <button class="main-btn" data-id="Z" data-icon="Show/Hwoad/blz.ico" data-page="BLZFILES/BoLiZhu.html">珠</button>
             </div>
             
             <button class="nav-btn next"><h1>R</h1></button>
