--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	    <div class="center-buttons">
 	        <button class="center-btn" onclick="navigateTo('GAMESTART/BSJQ.html')">GAMESTART</button>
 	        <button class="center-btn" onclick="navigateTo('story.html')">尚未布置</button>
-	        <button class="center-btn" onclick="navigateTo('blog.html')">尚未布置</button>
+	        <button class="center-btn" onclick="navigateTo('ghzhong.cn')">伍</button>
 	    </div>
 	</div>
 	
@@ -37,4 +37,5 @@
 	<script type="text/javascript" src="settings/JS/Ring/VARIATION.js"></script>
 	
 </body>
+
 </html>
