--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	    <div class="center-buttons">
 	        <button class="center-btn" onclick="navigateTo('GAMESTART/BSJQ.html')">GAMESTART</button>
 	        <button class="center-btn" onclick="navigateTo('story.html')">尚未布置</button>
-	        <button class="center-btn" onclick="navigateTo('ghzhong.cn')">伍</button>
+	        <button class="center-btn" onclick="navigateTo('http://ghzhong.cn/')">伍</button>
 	    </div>
 	</div>
 	
@@ -39,3 +39,4 @@
 </body>
 
 </html>
+
