--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-	<title>Redshift⚪asis的環想空間</title>
+	<title>RingIllusion 环幻</title>
 	<meta charset="utf-8">
 	
 	<meta name="description" content="你好...很高兴认识你！">
@@ -37,4 +37,5 @@
 	<script type="text/javascript" src="settings/JS/Ring/VARIATION.js"></script>
 	
 </body>
+
 </html>
