--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 <head>
-	<title>Section的環想空間</title>
+	<title>RingIllusion 环幻</title>
 	<meta charset="utf-8">
 <!--网页主题下方的描述说明内容-->
 	<meta name="description" content="這是我和小環共同製作的个人主页，目前還處於開發階段...">
 <!--搜索关键字-->
 	<meta name="keywords" content="幻想空間，Sectionp">
-	<meta name="author" content="小中·TT"
+	<meta name="author" content="环幻"
 	
 <!--浏览器标签栏图标-->
 	<link rel="icon" href="Huan.ico" type="image/x-icon">
@@ -32,4 +32,5 @@
 	<botton class="gradient-btn" onclick="window.location.href='work.html'">工作</botton>
 </head>
 </body>
+
 </html>	
