--- a/图书.html
+++ b/图书.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 <head>
-	<title>Section的環想空間</title>
+	<title>RingIllusion 环幻</title>
 	<meta charset="utf-8">
 <!--网页主题下方的描述说明内容-->
 	<meta name="description" content="這是我和小環共同製作的个人主页，目前還處於開發階段...">
 <!--搜索关键字-->
 	<meta name="keywords" content="幻想空間，Sectionp">
-	<meta name="author" content="小中·TT"
+	<meta name="author" content="环幻"
 <!--引入css文件-->
 	<link rel="stylesheet"
 		  href="配置/CSS/p標簽黑色.css">
@@ -44,4 +44,5 @@
 		<botton class="gradient-btn" onclick="window.location.href='工作.html'">工作</botton>
 </head>
 	</body>
+
 </html>	
