--- a/图书.html
+++ b/图书.html
@@ -6,7 +6,7 @@
 <!--网页主题下方的描述说明内容-->
 	<meta name="description" content="這是我和小環共同製作的个人主页，目前還處於開發階段...">
 <!--搜索关键字-->
-	<meta name="keywords" content="幻想空間，Sectionp">
+	<meta name="keywords" content="幻想空間">
 	<meta name="author" content="环幻"
 <!--引入css文件-->
 	<link rel="stylesheet"
@@ -46,3 +46,4 @@
 	</body>
 
 </html>	
+
