--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--网页主题下方的描述说明内容-->
 	<meta name="description" content="這是我和小環共同製作的个人主页，目前還處於開發階段...">
 <!--搜索关键字-->
-	<meta name="keywords" content="幻想空間，Sectionp">
+	<meta name="keywords" content="幻想空間">
 	<meta name="author" content="环幻"
 	
 <!--浏览器标签栏图标-->
@@ -36,3 +36,4 @@
 </body>
 
 </html>	
+
