--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--网页主题下方的描述说明内容-->
 	<meta name="description" content="這是我和小環共同製作的个人主页...">
 <!--搜索关键字-->
-	<meta name="keywords" content="幻想空間，Sectionp">
+	<meta name="keywords" content="幻想空間">
 	<meta name="author" content="环幻"
 	
 	<link rel="icon" href="Huan.ico" type="image/x-icon">
@@ -27,3 +27,4 @@
 </body>
 
 </html>	
+
