--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 <head>
-	<title>Hvored的環想空間</title>
+	<title>RingIllusion环幻</title>
 	<meta charset="utf-8">
 <!--网页主题下方的描述说明内容-->
 	<meta name="description" content="這是我和小環共同製作的動態個性網頁，目前還處於開發階段...">
 <!--搜索关键字-->
-	<meta name="keywords" content="幻想空間，Hvored">
-	<meta name="author" content="小中·TT"
+	<meta name="keywords" content="幻想空間">
+	<meta name="author" content="环幻"
 <!--引入css文件-->
 	<link rel="stylesheet"
 		  href="p標簽黑色.css">
@@ -29,4 +29,5 @@
 	<botton type="button" class="btn btn-primary" onclick="window.location.href='聊天系统.html';">跳转至聊天系统</botton>
 	<p> 这是一段文字，正在测试文字与背景的契合度</p>
 	</body>
+
 </html>	
